- Created basic layout - Added menu PDFs

--- a/index.html
+++ b/index.html
@@ -1,10 +1,5 @@
 <!doctype html>
 
-<!-- 
-  Oh hai. I didn't expect to see you here 😯
-  Well since you're here, feel free to keep exploring.
--->
-
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -19,7 +14,7 @@
     -->
     <meta property="og:title" content="Tako Korean BBQ">
     <meta property="og:description" content="Korean-Mexican fusion since 2012">
-    <meta property="og:url" content="http://bymilo.design/">
+    <meta property="og:url" content="http://sactako.com/">
     <meta property="og:type" content="website">
 
     <!-- Place <link> tags below -->
@@ -35,6 +30,35 @@
 
   <body>
     <main role="main">
+      <div class="main-content">
+        <h1>Tako Korean BBQ</h1>
+        <p class="main-description">We're updating the website. Sorry for the inconvenience. Please, give us a call if you have any questions. </p>
+        <div class="main-cta">
+          <a href="tel:916-346-4933">916-346-4933</a>
+          <a class="cta-viewMenu" href="./assets/tako-menu.pdf">View Menu</a>
+        </div>
+        <div class="restaurantInfo">
+          <div>
+            <h2>Address:</h2>
+            <div>
+              <a href="https://goo.gl/maps/1dACRx6uAU42">
+                3030 T St, Sacramento, CA 95816
+              </a>
+            </div>
+          </div>
+          <div class="hours-section">
+            <h2>Hours:</h2>
+            <div>
+              <div class="hours-subtitle">Sun - Thurs:</div>
+              10:30 am - 10:00 pm
+            </div>
+            <div>
+              <div class="hours-subtitle">Fri - Sat:</div>
+              10:30 am - 3:00 am
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
