added section for new hours

--- a/index.html
+++ b/index.html
@@ -55,6 +55,17 @@
               <div class="hours-subtitle">Fri - Sat:</div>
               10:30 am - 3:00 am
             </div>
+            <div class="new-hours">
+              <h3>New Hours Starting May 31:</h3>
+              <div>
+                <div class="hours-subtitle">Sun - Thurs:</div>
+                11:00 am - 10:00 pm
+              </div>
+              <div>
+                <div class="hours-subtitle">Fri - Sat:</div>
+                11:00 am - 12:30 am
+              </div>
+            </div>
           </div>
         </div>
       </div>
